Implemented scanning engine as well

--- a/src/Sherlock.App/Sherlock.App.csproj
+++ b/src/Sherlock.App/Sherlock.App.csproj
@@ -9,6 +9,13 @@
 
     <ItemGroup>
       <PackageReference Include="FIGlet.Net" Version="1.1.2" />
+      <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="data.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
